found bug in z-index which prevented links and hover effects. fixed it so links and hover work, but now having issues with bg-video again.

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -13,7 +13,6 @@
   background-image: linear-gradient(to right bottom, rgba($color-white, 0.799), rgba($color-blue-light, 0.799)), url(../src/images/Wonder_Walter_4.jpg);
   background-size: cover;
   background-position: top;
-  z-index: -3;
 }
 
 body {
