--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -97,12 +97,12 @@ html {
 
 .performance__title {
   margin: 7rem auto 0rem;
-  padding: 5rem 2rem 2rem;
+  padding: 5rem 2rem 0rem;
 }
 
 .about__title {
   margin: 7rem auto 0rem;
-  padding: 5rem 2rem 2rem;
+  padding: 5rem 2rem 0rem;
 }
 
 @media only screen and (min-width: 900px){
