--- a/sass/components/_performance.scss
+++ b/sass/components/_performance.scss
@@ -6,7 +6,6 @@
   padding-bottom: 20rem;
   background-color: $color-blue-light;
   background-image: linear-gradient(to right bottom, rgba($color-white, 0.799), rgba($color-blue-light, 0.799)), url(../src/images/Wonder_Walter_4.jpg);
-  z-index: -2;
 
   &__title {
     margin-top: 8rem;
@@ -19,8 +18,7 @@
   left: 0;
   height: 100%;
   width: 100%;
-  z-index: -1;
-  opacity: .3;
+  opacity: .2;
   overflow: hidden;
 
   &__content {
@@ -38,13 +36,14 @@
   border-radius: 3px;
   font-size: $default-font-size;
   display: inline-block;
+  z-index:1;
 
   &__image {
   width: 100%;
   }
 
   &__link {
-    z-index: 1;
+    text-decoration: none;
   }
 
   &__caption {
@@ -55,6 +54,13 @@
     transition: all .5s;
     backface-visibility: hidden;
   }
+}
+
+.talent:hover {
+  border-radius: .2rem;
+  box-shadow: 0 .3rem .5rem 0 rgba($color-black,0.24), 0 .5rem 2rem 0 rgba($color-black,0.19);
+  -moz-box-shadow: 0 .3rem .5rem 0 rgba($color-black,0.24), 0 .5rem 2rem 0 rgba($color-black,0.19);
+  -webkit-box-shadow: 0 .3rem .5rem 0 rgba($color-black,0.24), 0 .5rem 2rem 0 rgba($color-black,0.19);
 }
 
 @media only screen and (min-width: 490px){
@@ -72,5 +78,4 @@
   .talent {
     width: 33%;
   }
-
 }
